--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
-dist
-dist-ssr
+
+# Local settings
 *.local
 
 # Editor directories and files
