--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
   "name": "pokedex",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
+  "workspaces": [
+    "BE-service",
+    "FE-service"
+  ],
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.0.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "styled-components": "^6.1.17"
+    "cp": "^0.2.0",
+    "notistack": "^3.0.2",
+    "npm-run-all": "^4.1.5"
   },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.0"
+  "scripts": {
+    "reset": "copy BE-service\\original_db.json BE-service\\db.json",
+    "FE-service": "npm run dev --workspace=FE-service",
+    "BE-service": "npm run dev --workspace=BE-service",
+    "dev": "npm-run-all --parallel FE-service BE-service"
   }
 }
